# TITANE_INFINITY

./: .copilot-rules-permanent.md  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc  .vscodeignore  .watchmanconfig  ACCOMPLISSEMENTS_v24_COMPLETE.md  ANALYSE_FINALE_PRE_LANCEMENT_v12.md  ANALYSE_FINALE_v12.md  ANALYSE_FINALE_v12_TESTS.md  ANS_COMPLETE.md  APP_TSX_VISUAL_v16.txt  ARCHITECTURE.md  ARCHITECTURE_AUTO_HEAL_v16.md  ARCHITECTURE_CHAT_v16.0.txt  ARCHITECTURE_COMPLETE_V13_V14.md  ARCHITECTURE_OFFLINE_FIRST_v16.1.md  ARCHITECTURE_OVERDRIVE_v16.md  ARCHITECTURE_RULES_v17.md  ARCHITECTURE_VISUELLE_v15.5.txt  AUDIT_360_RAPPORT_FINAL_v17.md  AUDIT_APP_TSX_v16.md  AUDIT_FONCTIONNEL_META_MODE_v14.1.md  AUDIT_FRONTEND_FINAL_v10.4.0.md  AUDIT_FRONTEND_PHASE_1_STRUCTURE.md  AUDIT_GLOBAL_COMPLET_v24.2.0.md  AUDIT_INTEGRAL_TITANE_v10.0.0.md  AUDIT_REPORT_v15.5_FINAL.md  AUDIT_RESUME_EXECUTIF.md  AUDIT_UI_UX_COMPLET_v16.1.md  AUTO_EVOLUTION_v15_ACTIVATED.md  AUTO_FIX_SCRIPT_README.md  AUTO_HEAL_VISUAL_v16.txt  BACKEND_ARCHITECTURE.md  BACKEND_REFACTOR_SUMMARY_v17.2.0.md  BACKUP_PROTECTION_REPORT.md  BADGE_ASCENSION_v9.0.0.txt  BADGE_AUTONOMOUS_ACTION_v8.3.0.txt  (+573 more)
src-tauri/: Cargo.toml  Cargo.toml.backup  Cargo.toml.original  tauri.conf.json
src-tauri/icons/: create_icons.py  create_rgba_png.py  create_valid_png.py
src-tauri/src/: Cargo.toml  auto_heal.rs  fix_final.py  lib.rs  main.rs  main.rs.backup_110945  main.rs.backup_v17.1  main.rs.before_autofix  main.rs.old_v10.4.0  main_original.rs  tauri_v2_guard.rs
src-tauri/src/ai/: gemini.rs  mod.rs  ollama.rs  router.rs
src-tauri/src/ai_chat/: mod.rs
src-tauri/src/api/: engine_api.rs  helios_api.rs  legacy_commands.rs  memory_api.rs  mod.rs  system_api.rs
src-tauri/src/app/: main.rs  mod.rs  setup.rs
src-tauri/src/audio/: asr.rs  mod.rs  recorder.rs  vad.rs
src-tauri/src/auto_evolution_v15/: anticipation_evolution.rs  behavior_tuning.rs  consistency_manager.rs  context_learning.rs  emotional_tuning.rs  logic_calibration.rs  memory_expansion.rs  mod.rs  mode_adaptation.rs  pattern_learning.rs  selfheal_v15.rs  style_refinement.rs  supervisor.rs  tests.rs
src-tauri/src/commands/: ai_chat.rs  evolution.rs  exp_fusion.rs  meta_mode.rs  mod.rs
src-tauri/src/compression/: compressor.rs  mod.rs
src-tauri/src/core/: harmonia.rs  helios.rs  memory.rs  mod.rs  nexus.rs  sentinel.rs
src-tauri/src/digital_twin_v14_1/: alignment.rs  anticipation.rs  cognitive_map.rs  context_sync.rs  decision_engine.rs  identity_model.rs  memory_bridge.rs  mod.rs  preference_model.rs  selfheal.rs  style_engine.rs
system/config/: Cargo.toml  package.json  tauri.conf.json  vite.config.ts
(+842 files in other folders)
