[package]
name = "titane-infinity-backend"
version = "8.0.0"
description = "TITANE∞ Backend - Core System"
authors = ["TITANE Team"]
edition = "2021"

[lib]
name = "titane_infinity_backend"
path = "main.rs"

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
